# refcount

./: .gitmodules  README.md
krefcount/: README.md  paygo.patch  paygo_grouping.patch  run-qemu.sh
krefcount/test/: syscalls.c  syscalls.h
krefcount/uquery/: .gitignore  Makefile  README.md  fadvise_thread.c  main.c  run.sh  syscalls.h
krefcount/user/: syscalls.h
test/: hash  hash.c  list.h  run.sh
urefcount/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  plotter.py
urefcount/test/: CMakeLists.txt  vfs_cache_affinity_test.cc  vfs_nonatomic_test.cc  vfs_noop_test.cc  vfs_refcache_test.cc  vfs_test.cc
urefcount/vfs/: CMakeLists.txt
urefcount/vfs/include/: cpu.h  params.h  thread_manager.h  timer.h  utils.h  virtual_file.h  virtual_file_cache_affinity.h  virtual_file_nonatomic.h  virtual_file_noop.h  virtual_file_refcache.h  virtual_file_types.h
urefcount/vfs/include/ds/: hash_table.h
urefcount/vfs/src/: hash_table.cc  thread_manager.cc  virtual_file.cc  virtual_file_cache_affinity.cc  virtual_file_nonatomic.cc  virtual_file_noop.cc  virtual_file_refcache.cc
